--- a/app/views/fighters/_form.html.erb
+++ b/app/views/fighters/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.number_field :xp %>
   </div>
 
+  <div class="field">
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
