--- a/app/views/fighters/_card.html.erb
+++ b/app/views/fighters/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-sm-6 col-sm-6 mb-5">
+<div class="col-lg-3 col-sm-6 mb-5">
 	<%= link_to fighter_path(fighter.id) do  %>
 		<div class="card card-fighter no-border shadow shadow--hover">
 			<div class="card-img-top text-center p-2">
