--- a/app/views/fights/_card.html.erb
+++ b/app/views/fights/_card.html.erb
@@ -2,17 +2,17 @@
 	<%= link_to fight_path(fight.id) do  %>
 		<div class="card card-fight no-border shadow shadow--hover">
 			<div class="card-img-top text-center p-2">
-				<div class="row">
-					<div class="col-6">
+				<div class="row align-items-end">
+					<div class="col-7 ">
 						<%= image_tag fight.winner.avatar, alt: 'fight', class: "img-fluid" %>
 						<div class="carousel-caption">
 							<h3 style="text-shadow: 2px 2px 2px black;"><%= fight.winner.name %></h3>
 						</div>
 					</div>
-					<div class="col-6 ">
+					<div class="col-5 ">
 						<%= image_tag fight.loser.avatar, alt: 'fight', class: "img-fluid"%>
 						<div class="carousel-caption">
-							<h3 style="text-shadow: 2px 2px 2px black;"><%= fight.loser.name %></h3>
+							<h4 style="text-shadow: 2px 2px 2px black;"><%= fight.loser.name %></h4>
 						</div>
 					</div>
 				</div>
