--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body style="min-height: 100vh" class="d-flex flex-column justify-content-between">
     <%= render "layouts/nav"%>
     <%= render "layouts/flashes"%>
     <section class="slice slice-lg" id="sct-products">
