--- a/app/views/fighters/new.html.erb
+++ b/app/views/fighters/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Fighter</h1>
-
-<%= render 'form', fighter: @fighter %>
-
-<%= link_to 'Back', fighters_path %>
+<div class="card card-fighter no-border shadow shadow--hover m-5 p-5">
+  <h1 class="text-center">New Fighter</h1>
+  <div class="row">
+    <div class="flex-grow-1">
+      <%= render 'form', fighter: @fighter %>
+    </div>
+    <div class="px-3">
+      <%= image_tag "fighter/default.png", alt: 'fighter', style: "width: 22em"%>
+    </div>
+  </div>
+</div>
