--- a/app/views/fighters/_form.html.erb
+++ b/app/views/fighters/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div class="field pb-3">
-    <%= form.label :name %>
+    <%= form.label :name, class: "form-control-label" %>
     <%= form.text_field :name, class: 'form-control'%>
   </div>
 
   <div class="field pb-3">
-    <%= form.label :life %>
+    <%= form.label :life, class: "form-control-label" %>
     <%= form.number_field :life, class: 'form-control' %>
   </div>
 
   <div class="field pb-3">
-    <%= form.label :attack %>
+    <%= form.label :attack, class: "form-control-label" %>
     <%= form.number_field :attack, class: 'form-control' %>
   </div>
 
   <div class="field pb-3">
-    <%= form.label :xp %>
+    <%= form.label :xp, class: "form-control-label" %>
     <%= form.number_field :xp, class: 'form-control' %>
   </div>
 
   <div class="field pb-3">
-    <%= form.label :avatar %>
+    <%= form.label :avatar, class: "form-control-label" %>
     <%= form.file_field :avatar %>
   </div>
 
