--- a/app/views/fights/new.html.erb
+++ b/app/views/fights/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Fight</h1>
-
-<%= render 'form', fight: @fight %>
-
-<%= link_to 'Back', fights_path %>
+<div class="card card-fighter no-border shadow shadow--hover m-5 p-5">
+  <h1 class="text-center">New Fight</h1>
+  <div class="row">
+    <div class="flex-grow-1">
+      <%= render 'form', fight: @fight  %>
+    </div>
+    <div class="px-3">
+      <%= image_tag "fight_new.png", alt: 'fight', style: "width: 22em"%>
+    </div>
+  </div>
+</div>
