--- a/app/views/fights/show.html.erb
+++ b/app/views/fights/show.html.erb
@@ -1,13 +1,34 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Winner:</strong>
-  <%= @fight.winner %>
-</p>
-
-<p>
-  <strong>Loser:</strong>
-  <%= @fight.loser %>
-</p>
-
-<%= link_to 'Back', fights_path %>
+<div class="card card-fighter no-border shadow shadow--hover m-5">
+  <h1 class="p-5 text-center">Winner : <%= @winner.name %></h1>
+  <div class="card-img-top text-center p-2">
+    <div class="row align-items-end">
+      <div class="col-7 ">
+        <%= image_tag @winner.avatar, alt: 'fight', class: "img-fluid" %>
+      </div>
+      <div class="col-5 ">
+        <%= image_tag @loser.avatar, alt: 'fight', class: "img-fluid"%>
+      </div>
+    </div>
+  </div>
+  <hr class="m-0"> 
+  <div class="d-flex">
+    <% [@winner, @loser].each do |fighter| %>
+      <div class="col-6 p-0 border-right">
+        <div class="card-body text-center">
+          <h2 class="card-title"> <%= fighter.name %></h2>               
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Life : <%= fighter.life %></li>
+          <li class="list-group-item">Attack : <%= fighter.attack %></li>
+          <li class="list-group-item">Experience : <%= fighter.xp %></li>
+          <li class="list-group-item">
+            Equiped with : <%= fighter.xp %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
+  </div>
+  <div class="card-footer d-flex justify-content-around">
+    <%= link_to 'Back', fights_path %>
+  </div>
+</div>
