overflow hidden everywhere

--- a/app/views/fighters/edit.html.erb
+++ b/app/views/fighters/edit.html.erb
@@ -5,7 +5,7 @@
       <%= render 'form', fighter: @fighter %>
     </div>
 
-    <div class="px-3">
+    <div class="px-3" style="overflow: hidden">
       <%= image_tag @fighter.avatar, alt: 'fighter', style: "width: 22em"%>
     </div>
   </div>
