--- a/app/views/fighters/show.html.erb
+++ b/app/views/fighters/show.html.erb
@@ -1,5 +1,5 @@
 <div class="card card-fighter no-border shadow shadow--hover m-5">
-  <div class="card-img-top text-center p-2">
+  <div class="card-img-top text-center p-2" style="overflow: hidden">
     <%= image_tag @fighter.avatar, alt: 'fighter'%>
   </div>
   <div class="card-body pt-0 text-center">
