--- a/app/views/fights/show.html.erb
+++ b/app/views/fights/show.html.erb
@@ -2,10 +2,10 @@
   <h1 class="p-5 text-center">Winner : <%= @winner.name %></h1>
   <div class="card-img-top text-center p-2">
     <div class="row align-items-end">
-      <div class="col-7 ">
-        <%= image_tag @winner.avatar, alt: 'fight', class: "img-fluid" %>
+      <div class="col-7 " style="overflow: hidden">
+        <%= image_tag @winner.avatar, alt: 'fight', class: "img-fluid"  %>
       </div>
-      <div class="col-5 ">
+      <div class="col-5 " style="overflow: hidden">
         <%= image_tag @loser.avatar, alt: 'fight', class: "img-fluid"%>
       </div>
     </div>
