--- a/app/views/fighters/_card.html.erb
+++ b/app/views/fighters/_card.html.erb
@@ -1,7 +1,7 @@
 <div class="col-lg-3 col-sm-6 mb-5">
 	<%= link_to fighter_path(fighter.id) do  %>
 		<div class="card card-fighter no-border shadow shadow--hover">
-			<div class="card-img-top text-center p-2">
+			<div class="card-img-top text-center p-2 text-center" style="overflow: hidden">
 				<%= image_tag fighter.avatar, alt: 'fighter', height: 208%>
 			</div>
 			<div class="card-body pt-0 text-center">
