no weapon bug fixed

--- a/app/views/fights/_form.html.erb
+++ b/app/views/fights/_form.html.erb
@@ -15,7 +15,7 @@
 
     <div class="field mb-2">
       <%= label_tag "Fighter 1 :" %>
-      <%= form.select(:fighter_1_id, Fighter.all.collect {|u| [u.name, u.id]}, :prompt => 'Select', class: 'form-control') %>
+      <%= form.select(:fighter_1_id, Fighter.all.collect {|u| [u.name, u.id]}, class: 'form-control') %>
     </div>
 
     <div class="field">
@@ -35,7 +35,7 @@
   <div class="form-group border p-2">
     <div class="field mb-2">
       <%= label_tag "Fighter 2 :" %>
-      <%= form.select(:fighter_2_id, Fighter.all.collect {|u| [u.name, u.id]}, :prompt => 'Select', class: 'form-control') %>
+      <%= form.select(:fighter_2_id, Fighter.all.collect {|u| [u.name, u.id]}, class: 'form-control') %>
     </div>
 
     <div class="field">
